--- a/app/src/main/res/layout/activity_metering2.xml
+++ b/app/src/main/res/layout/activity_metering2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    tools:context=".metering.MeteringActivity"
+    tools:context=".MeteringActivity"
     android:onClick="onClick">
 
     <TextView
