--- a/app/src/main/res/layout-large/dialog_metering.xml
+++ b/app/src/main/res/layout-large/dialog_metering.xml
@@ -32,7 +32,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Розрахувати"
-        android:id="@+id/button2"
+        android:id="@+id/button"
         android:layout_below="@+id/editHeight"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
