--- a/app/src/main/res/layout-xlarge-land/dialog_metering.xml
+++ b/app/src/main/res/layout-xlarge-land/dialog_metering.xml
@@ -32,7 +32,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Розрахувати"
-        android:id="@+id/button3"
+        android:id="@+id/button"
         android:layout_below="@+id/editHeight"
         android:layout_centerHorizontal="true" />
 
