--- a/app/src/main/res/layout-normal-land/dialog_metering.xml
+++ b/app/src/main/res/layout-normal-land/dialog_metering.xml
@@ -11,7 +11,7 @@
         android:text="@string/dialog_title"
         android:id="@+id/textView5"
         android:layout_gravity="center_horizontal"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:gravity="center_vertical|center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -22,10 +22,18 @@
         android:inputType="numberSigned|numberDecimal"
         android:ems="10"
         android:id="@+id/editHeight"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:focusable="true"
         android:visibility="visible"
         android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Розрахувати"
+        android:id="@+id/button"
+        android:layout_below="@+id/editHeight"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5" />
 </RelativeLayout>
