--- a/app/src/main/res/layout-large-land/activity_splash.xml
+++ b/app/src/main/res/layout-large-land/activity_splash.xml
@@ -4,13 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
         android:id="@+id/imageView"
         android:src="@drawable/splash"
-        android:scaleType="centerCrop"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
