--- a/app/src/main/res/layout-large-land/activity_metering2.xml
+++ b/app/src/main/res/layout-large-land/activity_metering2.xml
@@ -5,7 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".DalnometerActivity"
     android:onClick="onClick">
-
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/imageView2"
+        android:src="@mipmap/arrow"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,7 +43,7 @@
         android:text="@string/angle_str"
         android:id="@+id/textView"
         android:textSize="50dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/imageView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -146,5 +152,4 @@
             android:textSize="30dp"
             style="@style/AlertDialog.AppCompat" />
     </LinearLayout>
-
 </RelativeLayout>
