--- a/app/src/main/res/layout-xlarge-land/activity_meter.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_meter.xml
@@ -79,4 +79,13 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:onClick="onClick"
+        android:visibility="visible"
+        android:id="@+id/layer">
+
+    </RelativeLayout>
+
 </RelativeLayout>
