--- a/app/src/main/res/layout-large-land/activity_splash.xml
+++ b/app/src/main/res/layout-large-land/activity_splash.xml
@@ -8,5 +8,6 @@
         android:src="@drawable/splash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:scaleType="centerCrop"/>
+
 </RelativeLayout>
