--- a/app/src/main/res/layout-xlarge-land/activity_meter.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_meter.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/imageView2"
-        android:src="@mipmap/arrow"
+        android:src="@mipmap/arrow2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     <TextView
