--- a/app/src/main/res/layout-large-land/activity_meter.xml
+++ b/app/src/main/res/layout-large-land/activity_meter.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    tools:context=".DalnometerActivity"
-    android:onClick="onClick">
-    <ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/imageView2"
-        android:src="@mipmap/arrow2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@color/colorPrimary"
+        android:layout_height="70dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/arrow2"/>
+
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +48,7 @@
         android:text="@string/angle_str"
         android:id="@+id/textView"
         android:textSize="50dp"
-        android:layout_below="@+id/imageView2" />
+        android:layout_below="@+id/toolbar" />
 
     <TextView
         android:layout_width="wrap_content"
