--- a/app/src/main/res/layout-xlarge-land/activity_meter.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_meter.xml
@@ -5,13 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".DalnometerActivity"
     android:onClick="onClick">
-    <ImageView
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/imageView2"
-        android:src="@mipmap/arrow2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@color/colorPrimary">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/arrow2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +52,7 @@
         android:text="@string/angle_str"
         android:id="@+id/textView"
         android:textSize="70dp"
-        android:layout_below="@+id/imageView2"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -84,7 +93,10 @@
         android:layout_height="match_parent"
         android:onClick="onClick"
         android:visibility="visible"
-        android:id="@+id/layer">
+        android:id="@+id/layer"
+        android:layout_below="@+id/textView10"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3">
 
     </RelativeLayout>
 
