--- a/app/src/main/res/layout-xlarge-land/activity_metering2.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_metering2.xml
@@ -5,13 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".DalnometerActivity"
     android:onClick="onClick">
-    <ImageView
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/imageView2"
-        android:src="@mipmap/arrow2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@color/colorPrimary"
+        android:layout_height="70dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/arrow2"/>
+
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +50,7 @@
         android:text="@string/angle_str"
         android:id="@+id/textView"
         android:textSize="70dp"
-        android:layout_below="@+id/imageView2"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -82,17 +89,6 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Калібрування"
-        android:id="@+id/buttonCalibration"
-        android:layout_above="@+id/buttonUpdate"
-        android:layout_centerHorizontal="true"
-        android:textSize="70dp"
-        style="@style/AlertDialog.AppCompat"
-        android:onClick="onClick" />
-
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Наступне вимірювання"
@@ -121,7 +117,8 @@
         android:layout_height="match_parent"
         android:onClick="onClick"
         android:visibility="visible"
-        android:id="@+id/layer">
+        android:id="@+id/layer"
+        android:layout_alignTop="@+id/textView10">
 
     </RelativeLayout>
 
