--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.grass.dalnometer.MainActivity">
-    <item
-        android:id="@+id/action_settings"
+    tools:context=".DalnometerActivity">
+
+    <item android:id="@+id/action_calibration"
+        android:title="@string/action_calibr"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
         app:showAsAction="never" />
+
 </menu>
