--- a/app/src/main/res/layout-normal-land/activity_meter.xml
+++ b/app/src/main/res/layout-normal-land/activity_meter.xml
@@ -28,7 +28,7 @@
         android:text="Відстань"
         android:id="@+id/textView10"
         android:textSize="35dp"
-        android:layout_above="@+id/textView2"
+        android:layout_alignTop="@+id/textView"
         android:layout_alignLeft="@+id/heightValue"
         android:layout_alignStart="@+id/heightValue" />
 
@@ -64,17 +64,6 @@
         android:id="@+id/angleValue"
         android:textSize="70dp"
         android:layout_below="@+id/textView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="o"
-        android:id="@+id/textView2"
-        android:textSize="20dp"
-        android:layout_alignTop="@+id/angleValue"
-        android:layout_toRightOf="@+id/angleValue"
-        android:layout_toEndOf="@+id/angleValue" />
 
     <TextView
         android:layout_width="wrap_content"
