--- a/app/src/main/res/layout-normal-land/activity_metering2.xml
+++ b/app/src/main/res/layout-normal-land/activity_metering2.xml
@@ -27,7 +27,7 @@
         android:text="Висота"
         android:id="@+id/textView10"
         android:textSize="30dp"
-        android:layout_above="@+id/textView2"
+        android:layout_alignTop="@+id/textView"
         android:layout_alignLeft="@+id/heightValue"
         android:layout_alignStart="@+id/heightValue" />
 
@@ -65,17 +65,6 @@
         android:layout_below="@+id/textView"
         android:layout_alignLeft="@+id/layer"
         android:layout_alignStart="@+id/layer" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="o"
-        android:id="@+id/textView2"
-        android:textSize="30dp"
-        android:layout_alignTop="@+id/angleValue"
-        android:layout_toRightOf="@+id/angleValue"
-        android:layout_toEndOf="@+id/angleValue" />
 
     <TextView
         android:layout_width="wrap_content"
