--- a/app/src/main/res/layout-xlarge-land/activity_meter.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_meter.xml
@@ -28,7 +28,7 @@
         android:text="Висота"
         android:id="@+id/textView10"
         android:textSize="70dp"
-        android:layout_above="@+id/textView2"
+        android:layout_below="@+id/toolbar"
         android:layout_alignLeft="@+id/heightValue"
         android:layout_alignStart="@+id/heightValue" />
 
@@ -70,17 +70,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="o"
-        android:id="@+id/textView2"
-        android:textSize="70dp"
-        android:layout_alignTop="@+id/angleValue"
-        android:layout_toRightOf="@+id/angleValue"
-        android:layout_toEndOf="@+id/angleValue" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="m"
         android:id="@+id/textView3"
         android:textSize="70dp"
@@ -94,9 +83,9 @@
         android:onClick="onClick"
         android:visibility="visible"
         android:id="@+id/layer"
-        android:layout_below="@+id/textView10"
         android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3">
+        android:layout_alignEnd="@+id/textView3"
+        android:layout_alignTop="@+id/textView10">
 
     </RelativeLayout>
 
