--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,5 +7,9 @@
         android:title="@string/action_calibr"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_help"
+        android:title="@string/action_help"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 
 </menu>
