--- a/app/src/main/res/layout-large-land/activity_meter.xml
+++ b/app/src/main/res/layout-large-land/activity_meter.xml
@@ -7,26 +7,21 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/arrow2"
         android:layout_height="70dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/arrow2"/>
 
     </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Висота"
+        android:text="Вiдстань"
+        android:layout_marginRight="5dp"
         android:id="@+id/textView10"
         android:textSize="50dp"
-        android:layout_above="@+id/angleValue"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentRight="true"
+        android:visibility="visible" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,7 +70,10 @@
         android:layout_height="match_parent"
         android:onClick="onClick"
         android:visibility="visible"
-        android:id="@+id/layer">
+        android:id="@+id/layer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     </RelativeLayout>
 
