--- a/app/src/main/res/layout-normal-land/activity_meter.xml
+++ b/app/src/main/res/layout-normal-land/activity_meter.xml
@@ -10,15 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimary">
-
-        <ImageView
-            android:layout_width="500dp"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/arrow2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        android:background="@drawable/arrow2">
 
     </android.support.v7.widget.Toolbar>
     <TextView
@@ -26,11 +18,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Відстань"
+        android:layout_marginRight="5dp"
         android:id="@+id/textView10"
         android:textSize="35dp"
         android:layout_alignTop="@+id/textView"
-        android:layout_alignLeft="@+id/heightValue"
-        android:layout_alignStart="@+id/heightValue" />
+        android:layout_alignParentRight="true"/>
 
     <TextView
         android:layout_width="wrap_content"
