--- a/app/src/main/res/layout-normal-land/activity_metering2.xml
+++ b/app/src/main/res/layout-normal-land/activity_metering2.xml
@@ -9,27 +9,21 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/arrow2"
         android:titleTextAppearance="@style/AlertDialog.AppCompat"
         android:layout_height="50dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/arrow2"/>
 
     </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Висота"
+        android:text="Вiдстань"
+        android:layout_marginRight="5dp"
         android:id="@+id/textView10"
         android:textSize="30dp"
         android:layout_alignTop="@+id/textView"
-        android:layout_alignLeft="@+id/heightValue"
-        android:layout_alignStart="@+id/heightValue" />
+        android:layout_alignParentRight="true"/>
 
     <TextView
         android:layout_width="wrap_content"
